@@ -9,8 +9,8 @@ import io.micronaut.http.annotation.Get;
 import io.micronaut.http.annotation.QueryValue;
 import jakarta.inject.Inject;
 
+import java.util.List;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 @Requires(property = "worker.enable-http-debug", value = "true")
 @Controller(value = "/debug", consumes = MediaType.ALL, produces = MediaType.TEXT_PLAIN)
@@ -20,13 +20,13 @@ public class ManagementController {
 
     @Get("/slots")
     public String slotsStates() {
-        Stream<LzySlot> slots = lzyFsServer.getSlotsManager().slots();
+        List<LzySlot> slots = lzyFsServer.getSlotsManager().slots().toList();
 
-        if (slots.findAny().isEmpty()) {
+        if (slots.isEmpty()) {
             return "No opened slots";
         }
 
-        return slots
+        return slots.stream()
             .map(slot -> String.format("%s: %s", slot.name(), slot.state()))
             .collect(Collectors.joining(";\n"));
     }
@@ -36,7 +36,7 @@ public class ManagementController {
         LzySlot lzySlot = lzyFsServer.getSlotsManager().slot(task, slot);
 
         if (lzySlot == null) {
-            return String.format("No slot found for task %s, slot %s", task, slot);
+            return "No slot found for task %s, slot %s".formatted(task, slot);
         }
         return lzySlot.toString();
     }
